--- a/haru-jewelry/app/globals.css
+++ b/haru-jewelry/app/globals.css
@@ -2,20 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  html{
+    @apply scroll-smooth
+  }
+  body{
+    @apply min-h-screen bg-custom-white text-black text-fs-400 overflow-x-hidden leading-normal tracking-normal
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.custom-container{
+  padding-inline: 1rem;
+  margin-block: 1rem;
+}
+
+.page-title-bg{
+ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='120' preserveAspectRatio='none' viewBox='0 0 1440 120'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1011%26quot%3b)' fill='none'%3e%3cpath d='M1445.8334082925703 19.66572786689647L1447.4607264844367-3.6060064884603413 1422.5616739372135 18.038409675030117z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M813.880829462084-10.822351378756874L802.3544324242258 10.805897786299495 823.7749611890672 10.432001065912418z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M806.9449084570058 110.21732702767254L815.3876133321828 127.52743726656816 824.2550186959014 101.77462215249557z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M439.7192496505319 70.43159773876125L452.76227719936765 69.2904806901818 444.5290878520806 50.29649789121786z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1192.2496830071618 33.77814860998491L1151.985981275784 28.080319024430366 1164.7250603463697 61.26675460548275z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M943.6129119818045 101.11979680425635L939.7395426598073 137.63763117130281 969.2890351430209 125.09461578040361z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M755.5622355203417 46.89678152324245L759.0029468574073 63.08405567762512 781.5635024204486 49.82935159483539z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M549.981371159291 129.80251472086954L567.9836994075282 129.17385956579807 558.0395525508023 102.48469477097802z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M1166.7695107372097 57.56683838821306L1178.3397589939384 86.20420773920515 1195.4068800882017 45.996590131484325z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M1041.277263446231 97.36192717354533L1038.1315202248747 117.22336820216202 1069.4965533784778 112.01126251988802z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M648.6287641598121 57.42423145053521L640.3981390029712 37.052719329440805 613.9561833997501 59.5844131252494z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M566.5454437556492 39.74176266603896L573.4491049836216 0.8061747647632771 540.7656391792623 12.059994539212724z' fill='rgba(15%2c 143%2c 229%2c 0.33)' class='triangle-float3'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1011'%3e%3crect width='1440' height='120' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cstyle%3e %40keyframes float1 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-10px%2c 0)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float1 %7b animation: float1 5s infinite%3b %7d %40keyframes float2 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-5px%2c -5px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float2 %7b animation: float2 4s infinite%3b %7d %40keyframes float3 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(0%2c -10px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float3 %7b animation: float3 6s infinite%3b %7d %3c/style%3e%3c/defs%3e%3c/svg%3e");
 }
